2004-07-14 Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b16

	Fix: Use getImagePath for voting result bars.
	     Voting bars were not skinable. (caught by Jade)

	Fix: Adapted modules.php for phpBB2 2.0.9

2004-07-13  Alan Harder <alan.harder@sun.com>  1.4.5-cvs-b15

	* $album->save() after rehighlight in makeThumbnail() so new size is saved.

2004-07-13  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b14

	* Fix: Added missing " in albums.php.
	  This caused every link after find orphans to be b0rked.

	* Fix: Added missing / to link to configwizard.

2004-07-13  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b13

	* Change: Add a 'rssMaxAlbums' option to the RSS page in the config wizard,
	  specifying the maximum number of changed albums to be returned in
	  the feed.  Defaults to 25.

	* Change: Try and optimize the number of times we use isHiddenRecurse and
	  canReadRecurse when populating the RSS data

2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b12

	* Change: Get rid of the 'FRAME' alt= tags because it's valid HTML
	  with alt="", and jmullan's right.. they look like ass in lynx.

2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b11

	* Change: Hidden images/albums could be *too* hidden (owner couldn't see them)

	* Change: slideshow validation URL is based on whether you're looking at an
	  album, or the gallery-wide show.

	* Typo: Another photoAlbumUrl -> photoAlbumURL 
	  (so much for variables being case insensitive)

2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b10

	* Typo: photoAlbumURL not photoAlbumUrl

2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b9

	* Change: $adminCommands links now use CSS to prevent breaks in 
	  two-word links. (e.g. "[manage users]")

	* Change: Change 'one' to '1' to maintain consistancy

	* Change: Clear up to possible PHP notices for use_exif being
	  unset.

2004-07-11  Jens A. Tkotz <jens@peino.de> 1.4.5-cvs-b8
