@@ -1,3 +1,8 @@
+2004-07-13  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b17
+
+	* Change: Give clickable dimensions their own table row to prevent
+	  a scenario where they appear *beside* the image
+
 2004-07-14 Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b16
 
 	Fix: Use getImagePath for voting result bars.
